@@ -1,8 +1,13 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.25 2009-07-07 21:57:17 guru Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.26 2009-09-15 07:51:30 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
+<HR>
+<H3><CENTER>20-SEPT-2009: GMT Version 4.5.1 Released</H3></CENTER>
+4.5.1 scripts should be fully backward compatible with 4.5.0.  For a list of all the new
+capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
+page.
 <HR>
 <H3><CENTER>15-JUL-2009: GMT Version 4.5.0 Released</H3></CENTER>
 4.5.0 scripts are for the most part fully backward compatible with 4.4.0.  One
