@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_releases_template.html,v 1.9 2009-09-10 08:32:26 guru Exp $  -->
+<!--  $Id: gmt_releases_template.html,v 1.10 2009-09-15 07:51:30 guru Exp $  -->
 <TITLE>GMT Release Notes</TITLE>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Release Notes</CENTER></h2><P>
@@ -15,7 +15,7 @@ version of GMT (the CVS version) see the
 <UL>
 <LI><B>GMT 4</B>
 <OL>
-<LI>15-SEP-2009: GMT Version 4.5.1 Released
+<LI>20-SEP-2009: GMT Version 4.5.1 Released
 <LI>15-JUL-2009: GMT Version 4.5.0 Released
 <LI>15-FEB-2009: GMT Version 4.4.0 Released
 <LI>15-MAY-2008: GMT Version 4.3.1 Released
